--- a/internship.html
+++ b/internship.html
@@ -49,11 +49,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/lee/job/og6DafwT'>Lee Enterprises Careers - Copy Editor Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/lee/job/og6DafwT'>Lee Enterprises Careers - Copy Editor Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/intern-business-analyst-2680'>Intern-Business Analyst - Itron Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/intern-business-analyst-2680'>Intern-Business Analyst - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -69,7 +69,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://lovecrafts.recruiterbox.com/jobs/fk03f1w/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lovecrafts.recruiterbox.com/jobs/fk03f1w/'>
     Content Coordinator - Internship at LoveCrafts
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -107,7 +107,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/seHnz13o1w/Intern-Communications-And-Events-New-York'>Intern, Communications and Events (New York) - United Nations Foundation - Career Page</a></h5> 
+<h5><a href='http://unitednationsfoundation.applytojob.com/apply/seHnz13o1w/Intern-Communications-And-Events-New-York'>Intern, Communications and Events (New York) - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -119,7 +119,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VoyagePriv/743999692301374-country-manager-assistant-summer-paid-internship'>Voyage Priv? Country Manager Assistant Summer Paid Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/VoyagePriv/743999692301374-country-manager-assistant-summer-paid-internship'>Voyage Priv? Country Manager Assistant Summer Paid Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://codal.applytojob.com/apply/ycpxZC/UX-Internship'>UX Internship - Codal - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://codal.applytojob.com/apply/ycpxZC/UX-Internship'>UX Internship - Codal - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -179,11 +179,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='https://luxasia.workable.com/j/B2A2E4A838'>Luxasia - Jobs: E-commerce Internship - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luxasia.workable.com/j/B2A2E4A838'>Luxasia - Jobs: E-commerce Internship - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luxasia.workable.com/j/D0216D477A'>Luxasia - Jobs: Business Project Intern - Apply online</a></h5> 
+<h5><a href='https://luxasia.workable.com/j/D0216D477A'>Luxasia - Jobs: Business Project Intern - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -219,7 +219,7 @@
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Swissquote/743999692375143-account-opening-kyc-intern-6-months'>Swissquote Account Opening (KYC) Intern - 6 months | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Swissquote/743999692375143-account-opening-kyc-intern-6-months'>Swissquote Account Opening (KYC) Intern - 6 months | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -418,7 +418,7 @@ organizational projects and initiatives.Key ResponsibilitiesAssists in.....</p>
 architect a trading system for scale and to support the massive amounts of data 
 that?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=olF19fwU&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nYwPUKws'>Schneider Electric NAM Careers - Software Programmer Fall Internship</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=olF19fwU&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nYwPUKws'>Schneider Electric NAM Careers - Software Programmer Fall Internship</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
