Data Engineer - Monitoring and Observability - Bossanova Robotics - Career Page. Senior Data Engineer (Cloud) - Fractal Analytics - Career Page. Data Engineer (9359888) - PRO Unlimited @ Facebook - Career Page. Adevinta Classified Media Hungary Kft - Jobs: Szoftverfejleszt? / Data Engineer - Apply online. Stepping Up Solutions  Data Engineer | SmartRecruiters. Stepping Up Solutions  Lead Data Engineer | SmartRecruiters. Stepping Up Solutions  Lead Data Engineer | SmartRecruiters. 4Catalyzer Data Engineer | SmartRecruiters. Credit Karma - Senior Data Engineer. FiscalNote - Director of Data Engineering. Data Engineer - Automotive | Averity. VEON - Big Data Engineer. Junior Data Engineer - NIKE, Inc. Careers. Massive Insights Data Engineer | SmartRecruiters. Ubisoft Data Engineer | SmartRecruiters. Job Application for Sr. Data Engineer at Cast & Crew Entertainment .... Job Application for Principal Data Engineer at WeWork Global .... Data Engineer, Mid. Data Engineer, Mid | USA, VA, Herndon (575 Herndon Pkwy). HopHR - Data Engineer - San Jose, CA. Game Analytics - Jobs: Senior Data Engineer - Apply online. Purpose Financial Data Engineer | SmartRecruiters. HopHR - Data Engineer - Boston, MA. StreetLight Data - Senior Data Engineer. Vichara Data Engineer - Python AWS Java | SmartRecruiters. Job Application for Senior Data Engineer at Grailed. Data Engineer - Rakuten Careers. Data Engineer - CBS Interactive Careers. Pac-12 Networks Careers - Data Engineer. VIE - R&I data engineer - Chemoinformatics | Solvay. Senior Data Engineer | Averity. Principal Data Engineer (HealthTech) | Averity. DataProphet Data Engineer - Customer Success | SmartRecruiters. Ancestry - Data Engineer – Enterprise Data Management / DNA Operations. Crisalix - Jobs: Data Engineer - Apply online. Denodo Technologies Data Engineer - SQL / Big Data / Cloud | SmartRecruiters. Job Application for Sr. Data Engineer - Airflow Specialization  at Curology.       Data Engineer - DefinedCrowd     . Guidewire So

--- a/data-engineer.html
+++ b/data-engineer.html
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692349818-data-engineer'>Ubisoft Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692349818-data-engineer'>Ubisoft Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -129,7 +129,7 @@ data delivery systems and transform it into beautiful insights, analysis, and?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PurposeFinancial/743999692323217-data-engineer'>Purpose Financial Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PurposeFinancial/743999692323217-data-engineer'>Purpose Financial Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -242,7 +242,7 @@ this job. In Xfers, you'll likely get experience on many different projects acro
 with the role for which you're applying??. Please tell us why you selected such a
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Crossmedia/743999692213329-data-engineer'>Crossmedia Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Crossmedia/743999692213329-data-engineer'>Crossmedia Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY Los Angeles New York Hamburg Berlin London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -279,7 +279,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light">Munich Munich London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/7D36E4E05A'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/7D36E4E05A'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -368,7 +368,7 @@ product design, measuring advertising effectiveness, helping users discover?...<
 <p>22 hours ago ... Description. Senior Data Engineer/Lead: Our culture favors doers, innovators and 
 disruptors. We are growing, we get things done, and we are always looking for?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/sbmoffshore/job/oDXzafw3'>SBM Offshore Careers - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sbmoffshore/job/oDXzafw3'>SBM Offshore Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... We are looking for a Data Engineer to join the Digital FPSO Project in Operations. 
 The hire will be responsible for expanding and optimizing our Operations data?...</p>
@@ -391,7 +391,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034780-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034780-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
